--- a/src/pages/rides/02.md
+++ b/src/pages/rides/02.md
@@ -5,7 +5,7 @@ title: 'Coromandel ride'
 stravaId: 1844248203
 ---
 
-# Coromandel
+# Auckland to Coromandel
 
 Id in magna occaecat ipsum aliquip commodo cupidatat cupidatat adipisicing velit nulla tempor nulla veniam. Duis nisi adipisicing velit proident aliquip nulla magna. Cillum eu aliquip ipsum ut. Ullamco id laborum fugiat eiusmod laboris.
 
