--- a/src/pages/rides/02-auckland-coromandel/02.md
+++ b/src/pages/rides/02-auckland-coromandel/02.md
@@ -1,12 +1,16 @@
 ---
 path: '/rides/coromandel-ride'
 date: '2018-06-01'
-title: 'Second'
-excerpt: 'First'
+title: 'Auckland Dream Ride'
+excerpt: 'Id in magna occaecat ipsum aliquip commodo cupidatat cupidatat adipisicing velit nulla tempor nulla veniam. Duis nisi adipisicing velit proident aliquip nulla magna. Cillum eu aliquip ipsum ut. Ullamcaa Duis nisi adipisicing velit proident aliquip nulla magna. Cillum eu aliquip ipsum ut. UllamcaaDuis nisi adipisicing velit proident aliquip nulla magna. Cillum eu aliquip ipsum ut. UllamcaaDuis nisi adipisicing velit proident aliquip nulla magna. Cillum eu aliquip ipsum ut. Ullamcaa sdf asdfdss dfsa sdfasdfas dfasdfasd fasd fasd fafasd df asdfasfdf asd fasd fasd fasf asdfo  as id laborum fugiat eiusmod laboris'
 strava_id: 1844248203
-cover_image: 'test.jpg'
+cover_image: 'cover.png'
 ---
 
-# Auckland to Coromandel
+Id in magna occaecat ipsum aliquip commodo cupidatat cupidatat adipisicing velit nulla tempor nulla veniam. Duis nisi adipisicing velit proident aliquip nulla magna. Cillum eu aliquip ipsum ut. Ullamco id laborum fugiat eiusmod laboris.
+
+![](https://placehold.it/600x300)
 
 Id in magna occaecat ipsum aliquip commodo cupidatat cupidatat adipisicing velit nulla tempor nulla veniam. Duis nisi adipisicing velit proident aliquip nulla magna. Cillum eu aliquip ipsum ut. Ullamco id laborum fugiat eiusmod laboris.
+
+![](https://placehold.it/600x300)
