--- a/src/pages/rides/03-third-post/03.md
+++ b/src/pages/rides/03-third-post/03.md
@@ -1,12 +1,16 @@
 ---
 path: '/rides/third-ride'
 date: '2018-08-01'
-title: 'Third'
-excerpt: 'First'
-strava_id: 914387369
-cover_image: 'test.jpg'
+title: 'Struggle Street'
+excerpt: 'Id in magna occaecat ipsum aliquip commodo cupidatat cupidatat adipisicing velit nulla tempor nulla veniam. Duis nisi adipisicing velit proident aliquip nulla magna. Cillum eu aliquip ipsum ut. Ullamco id laborum fugiat eiusmod laboris'
+strava_id: 2028535240
+cover_image: 'cover.png'
 ---
 
-# Auckland to Coromandel
+Id in magna occaecat ipsum aliquip commodo cupidatat cupidatat adipisicing velit nulla tempor nulla veniam. Duis nisi adipisicing velit proident aliquip nulla magna. Cillum eu aliquip ipsum ut. Ullamco id laborum fugiat eiusmod laboris.
+
+![](https://placehold.it/600x300)
 
 Id in magna occaecat ipsum aliquip commodo cupidatat cupidatat adipisicing velit nulla tempor nulla veniam. Duis nisi adipisicing velit proident aliquip nulla magna. Cillum eu aliquip ipsum ut. Ullamco id laborum fugiat eiusmod laboris.
+
+![](https://placehold.it/600x300)
