--- a/src/pages/posts/01-ohakune-weekend-stage-1/01.md
+++ b/src/pages/posts/01-ohakune-weekend-stage-1/01.md
@@ -2,10 +2,11 @@
 path: '/rides/ohakune-weekend'
 date: '2018-03-24'
 title: 'Ohakune Weekend'
-excerpt: So the Ohakune weekend Stage 1 was upon us. We’d all managed to navigate our way safely to Ohakune, albeit some where pretty late. We were to get up at 4:30am to be on the road for 5. For those that arrived late on Friday night, that was a shock.
+excerpt: So the Ohakune weekend Stage 1 was upon us. We’d all managed to navigate our way safely to Ohakune, albeit some where pretty late. We were to get up at 4:30am to be on the road for 5.
 strava_id: 1468105162
-cover_image: 'cover.jpg'
+cover_image: 'cover2.jpg'
 location: Ohakune, Mt Ruapehu
+author: Jason Bryant
 ---
 
 So the Ohakune weekend Stage 1 was upon us. We’d all managed to navigate our way safely to Ohakune, albeit some where pretty late. We were to get up at 4:30am to be on the road for 5. For those that arrived late on Friday night, that was a shock.
@@ -14,13 +15,17 @@ The alarm went off. The usual quietness instilled. No one really talks much at t
 
 It wasn’t until we were all on the road that the chatter started. Nervous chatter. Chatter about doing 330km. We’d all discussed about carrying less equipment, and share the load. But in the silence no one broached the subject, so we all ended up carrying 2 tubes, gas, levers and tools. The only positive from all of carrying tubes is that we obviously scared the puncture demons away. We had just one puncture the whole day, and that happened early on.
 
-![Giant TCR](01.jpg 'Giant TCR')
+![Puncture](IMG_3407.jpg 'The only puncture of the day.')
 
 ## The Ride
 
 It all started out so well. A little tail wind, not too cold, and this time we had a group of seven riders. Then we hit the desert road. From here until just after the central plateau it all turned to shit. It started to rain. The wind was now wrapping around the mountain and offering us a headwind. The road surface is unkind to cyclists, even more so with roadworks. Although the shoulder is wide in places, it’s non-existent in others. When dealing with trucks it makes it especially scary.
 
+![Truck](IMG_3413.jpg 'Dealing with trucks early in the morning was slightly terrifying.')
+
 As soon as we reached the summit of the desert road, we cruised down to Tuarangi. A gentle roll at 40kph for 30 km. The feeling of reaching the highest point of the ride can’t be over exaggerated. It was here that the rain finally stopped for a while. We were frozen. Guy too cold to change gears with his fingers. He’d decided to brave the cold in just a jersey. Mad, simply mad, I tell you. The rest of us at least had a jacket.
+
+![Desert Road](IMG_0913.jpg 'Desert road.')
 
 We arrived in Tuarangi. Headed straight for the nearest café. Breakfast and multiple coffees, all of which were pretty top notch. Trying to eat whilst shivering was proving a problem. Guy looked hypothermic. That warmed me up, knowing I wasn’t the coldest in our group. We had to make a decision. Would we be able to make 330km, or should we be sensible and cut it short! The answer was proving difficult to find. I made the executive decision that we should just abandon our dreams of reaching 330. Let’s just cut it short and let sanity prevail. As soon as it was suggested that we would cut it short everyone agreed in haste.
 
@@ -37,6 +42,8 @@ Everyone was a little warmer and happier, now. We were fed and watered. The weat
 The final dash for Ohakune was a smashfest. All guns blazing we roared to the finish. A smash for the line as we finished the final stage of the day. Glory was ours. Onto the pub, well, café (again).
 
 A dash to the old railway station for some more GLCC jersey pics, and our journey was nearly over. Although it was cut short, we felt this was the best decision for everyone. A night in the Powderkeg made sure of that. Everyone had a few beers and then it was straight to sleep, ready for the Turoa TT the next day.
+
+![Giant TCR](giant_tcr.jpg 'Giant TCR')
 
 ## Makatote Viaduct
 
@@ -55,3 +62,7 @@ The meaning of the name Ohakune in the Māori language is “the place of” (Ō
 Known for it’s skiing, it’s also worth checking Ohakune out in the Summer. The roads south are great for road cycling. There’s also plenty of mountain biking to be had. It’s Home of the Ohakune Old Coach Road and the starting point for the Mountains to Sea cycle trail.
 
 There’s plenty of great accommodation in Ohakune, but I’d recommend staying close to the town centre. It has a great heart, and the locals are friendly.
+
+<div class="pa4 tc bg-near-white lh-body f5 near-black">
+This entry was originally posted <a href="http://greylynncycleclub.com/ohakune-weekend-stage-1/">here</a>
+</div>
