--- a/src/pages/posts/04-k2-ride/04-k2.md
+++ b/src/pages/posts/04-k2-ride/04-k2.md
@@ -2,12 +2,20 @@
 path: '/rides/k2-ride'
 date: '2018-06-16'
 title: 'K2 Ride'
-excerpt: We’re up and ready to climb New Zealand’s only Hors Category (HC) road. We were, and continue to be surprised that the Ohakune to Turoa climb is NZ’s only HC climb. When you think of all of the other mountain roads there are throughout NZ, it’s a little surprising.
+excerpt: The K2 is possibly the toughest one day cycle challenge in the Southern Hemisphere. It is also one of the most scenic and varied with the route travelling through sub tropical forest, pacific coastlines, rural farmland and the Pohutukawa coastline of the Hauraki Gulf.
 strava_id: 1641120384
 cover_image: 'cover.jpg'
 location: Coromandel, New Zealand
+author: Jacky Lee
 ---
 
-# Coffee Stop
+The K2 is possibly the toughest one day cycle challenge in the Southern Hemisphere. It is also one of the most scenic and varied with the route travelling through sub tropical forest, pacific coastlines, rural farmland and the Pohutukawa coastline of the Hauraki Gulf.
 
-<marker-link lat="-37.177709" lng="175.294114">Miranda coffee shop</marker-link> is where we stop to get a coffee.
+> The event is named after Kuaotunu, an enchanting community on the wild eastern coastline of the Coromandel Peninsula. In Maori, the name Kuaotunu means “to inspire fear in young animals” ! The 2 represents the almost 200km that the ride will cover. By coincidence K2 is the 2nd highest, and probably the most difficult to climb, mountain in the World.
+>
+> – <cite>ArcEvents</cite>
+
+# First thing first
+
+We set off to Coromandel first thing in the morning, and made sure to grab a coffee on the way to wake up our weary morning souls. The agreed meeting spot was the carpark of Thames PAK'nSAVE. We got there at 7am, and waiting for the rest of the group to arrive while we unload our bikes off Jason’s car.
+![Start of the day](IMG_5487.jpg 'Start of the day')
