--- a/src/pages/posts/04-k2-ride/04-k2.md
+++ b/src/pages/posts/04-k2-ride/04-k2.md
@@ -5,6 +5,7 @@ title: 'K2 Ride'
 excerpt: The K2 is possibly the toughest one day cycle challenge in the Southern Hemisphere. It is also one of the most scenic and varied with the route travelling through sub tropical forest, pacific coastlines, rural farmland and the Pohutukawa coastline of the Hauraki Gulf.
 strava_id: 1641120384
 cover_image: 'cover.jpg'
+social_image: 'social.jpg'
 location: Coromandel, New Zealand
 author: Jacky Lee
 publish: false
