--- a/src/blog/01/01.md
+++ b/src/blog/01/01.md
@@ -1,14 +1,47 @@
 ---
 type: 'blog'
 path: '/blog/first-blog'
-date: '2019-07-19'
-title: 'Blog post'
-excerpt: Occaecat incididunt eiusmod dolore Lorem anim qui pariatur eu. Eiusmod aute anim ea culpa pariatur duis adipisicing sit consectetur ad cupidatat anim minim. Commodo elit nisi et mollit aliqua pariatur esse ullamco. Duis veniam dolor veniam tempor non exercitation enim. Fugiat occaecat officia cupidatat deserunt culpa Lorem eu aliqua esse nostrud dolore magna. Consectetur reprehenderit incididunt proident veniam reprehenderit fugiat enim aliquip cillum enim aliqua proident.
-cover_image: 'cover2.jpg'
+date: '2014-10-27'
+title: 'From architecture to product design'
+excerpt: April 2014, I left Architecture to pursue my new passion in Product Design at Vend. That heavy decision was made after 5 years of architecture school plus a year of graduate work in a large consultancy firm.
 social_image: 'social-image.jpg'
 location: New Zealand
 author: Jacky
-publish: true
+publish: false
 ---
 
-Occaecat incididunt eiusmod dolore Lorem anim qui pariatur eu. Eiusmod aute anim ea culpa pariatur duis adipisicing sit consectetur ad cupidatat anim minim. Commodo elit nisi et mollit aliqua pariatur esse ullamco. Duis veniam dolor veniam tempor non exercitation enim. Fugiat occaecat officia cupidatat deserunt culpa Lorem eu aliqua esse nostrud dolore magna. Consectetur reprehenderit incididunt proident veniam reprehenderit fugiat enim aliquip cillum enim aliqua proident.
+I left Architecture in 2014 to pursue my new passion in Product Design at [Vend](https://www.vendhq.com/). That decision was made after 5 years of architecture school & a couple years into working at [AECOM](https://www.aecom.com/). Had I stuck with it for a few more years, maybe I could have ticked the right boxes and get my registration.
+
+I took a leap of faith into something new. It was a "now or never" situation and I was desperate for a change. The type of projects I got tasked with as a graduate were not satisfying, creatively speaking, thus put me off wanting to keep pursuing the dream of becoming an architect.
+
+Documenting buildings with Revit from 9 to 5 wasn’t exactly the type of creative environment I wanted to be in. I felt underutilized, stuck, and most importantly, _bored_. During those times, I vented that creative itch outside of work. With the help of friends and the internet, I took up web development, built myself a portfolio, [entered an app challenge](http://chrisgreeff.github.io/easyir/), and started some side projects. These passion projects eventually paved my way into my first software design gig at [Vend](https://www.vendhq.com/).
+
+## Turning hobbies into a career
+
+I used to be skeptical about this, probably because I personally have way too many hobbies. Most of them revolved around design & technology. I still remember trying to figure out every single feature that came bundled with my beloved first phone, Sony Ericsson W850. I would test its limits, research each feature, imagine how life would be different if I used that feature extensively. I would customize its themes, even if it meant bricking it a few times when modding its custom firmwares. It was satisfying being able to manipulate interfaces at my own will.
+
+Carrying these hobbies through Architecture school has critically helped shape my skills in communicating ideas; I secretly think that I owe my degree to graphic design. Getting addicted to 3D visualisation and diagramming my dead-simple design ideas has been my go-to strategy for every semester. Maybe this is why I’m enjoy doing so much interactive prototyping work at Vend, but that topic deserves another post.
+
+With my belly full of fire in digital design at the tech scene, compounded with a secret fantasy for working in a startup, I finally handed in my resignation letter and got onboard with Vend!
+
+Huuuuuuuge shoutout to our amazing head of talent Kirsti, for giving me a chance at joining such an amazing company despite my lack of practical experience! Thank you so mucho!
+
+Work at Vend has been an awesome ride so far! 3 months felt more like a year in Vend time. No joke. The amount of design thinking that goes into creating a delightful and beautiful product has been as challenging and exciting as architecture design, with one exception: Things get shipped alot faster in tech than in the building industry. What blows me away is that the design decisions I make today, will literally affect thousands of Vend users tomorrow.
+
+To my surprise, there are a lot of similarities between architecture design and software product design. Perhaps this is why Architecture school seldom taught us practical work, but focused on design thinkinginstead.
+Here are a few things that are almost identical to being an architect:
+We design empathetically for the end user.
+
+- Form follows function; We care about how a product works first before we care about how it looks.
+- We pitch for very-nice-to-have to engineer/developers so we can settle for nice-to-have.
+- We provide specification drawings of user interface designs to developers the same way architects generate working drawings for contractors to start construction.
+- We build high-fidelity mockups/prototypes for developers the same way architects render photorealistic visualization for clients.
+- I’ll keep this list update as I find more.
+
+This new chapter has given me a new definition on work. For the first time I find myself saying “Oh shit it’s friday” rather than TGIF because I genuinely love what I do. Along the way, I’ve noticed a few key differences that makes Vend awesome:
+
+1. Flexibility: In my previous work experiences, everyone had their own cubicles and was more or less tied to their desks all day long. At Vend, even though we have our allocated desks, everybody works with a laptop so floating around the office was encouraged. Some days I would choose to work from a couch, from the cafe, or from home. It’s awesome to not being restricted on working at one place, especially in the field of design where inspiration can strike from anywhere and anytime.
+2. Not afraid to try new things: In corporate offices there are usually strict procedural rules on the way things are done, and any change to the status quo needs to be reviewed by the ‘higher up’ before permitting to do it. At Vend, JFDI (Just F\*\*king Do It) is encouraged if there are better ways to do my work. This is incredibly useful as a designer, because things happen so fast in this industry that there are new standards and tools popping up regularly. Vend wants us to achieve our best work, our way.
+3. Bring our personality to work: Vend encourages us to not leave our personality at the door. It’s a workplace where you can be yourself. Having a pet-friendly office is one way of doing just that. Also, we sometimes hold ‘nerd lunches’ where people get together to talk about shared interests and hobbies that they are passionate about.
+
+So there goes my unconventional path of becoming a product designer. I sincerely hope this blog entry find its way to design graduates that can relate. So far I have had no regrets at all. It is scary and exciting at the same time that the role of a product designer constantly evolves along the pace of this scene. Quite often I get asked, “Will you ever go back to architecture?”, and frankly speaking, “I don’t know”. One thing I am certain is that I care a lot more about what I design now than what I did in architecture. That’s a good sign right?
