--- a/src/blog/02/02.md
+++ b/src/blog/02/02.md
@@ -1,6 +1,6 @@
 ---
 type: 'blog'
-path: '/blog/second-blog'
+path: '/blog/how-do-i-become-a-designer'
 date: '2016-04-04'
 title: 'How do I become a designer?'
 excerpt: 'Many aspiring designers wanting to get into software design have asked me the same questions:'
